--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit==1.25.0 
-pandas==2.0.3 
+streamlit
+pandas
 numpy 
-matplotlib==3.7.2 
-seaborn==0.12.1 
-scikit-learn==1.2.2
+matplotlib
+seaborn
+scikit-learn
+setuptools
